--- a/README
+++ b/README
@@ -5,6 +5,7 @@ sudo FLASK_APP=server.py venv/bin/flask run --host=0.0.0.0 --port=80
 https://www.jakowicz.com/flask-apache-wsgi/
 ```
 sudo apt-get install apache2 libapache2-mod-wsgi
+sudo cp daisyzone.wsgi /var/www/daisyzone/
 ```
 edit /etc/hsots to include
 ```
@@ -12,5 +13,4 @@ edit /etc/hsots to include
 ```
 
 # TODO:
-set up an actual web server in front (http://flask.pocoo.org/docs/0.12/deploying/)
 use docker or something, this is silly
